<?xml version="1.0"?>
<package format="2">
  <name>abb_irb4600_40_255</name>
  <version>1.0.0</version>
  <description>The abb_irb4600_40_255 package</description>
  <maintainer email="rust@arch.ethz.ch">Romana Rust</maintainer>
  <maintainer email="zhuzhang@student.ethz.ch">Zac Zhu Zhang</maintainer>

  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <!-- <buildtool_depend>catkin</buildtool_depend> -->

  <!-- <test_depend>roslaunch</test_depend> -->
  <exec_depend>joint_state_publisher</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>rviz2</exec_depend>
  <exec_depend>xacro</exec_depend>
  <exec_depend>joint_state_publisher</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>